fixed a bug so that this will generate a working tar ball and added install instructions on a linux host

--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -2,5 +2,6 @@
 
 bin_PROGRAMS = cuebreakpoints cueconvert cueprint
 bin_SCRIPTS = cuetag.sh
+dist_bin_SCRIPTS = cuetag.sh
 LDADD = ../lib/libcuefile.a
 AM_CPPFLAGS = -I$(srcdir)/../lib
